--- a/bestiary/templates/bestiary/beast.html
+++ b/bestiary/templates/bestiary/beast.html
@@ -9,6 +9,7 @@
 <body>
     <h1>{{beast.name}}</h1>
     <h3>{{beast.nickname}}</h3>
+    <img src="{{beast.image.url}}" width="250" height="250">
     <p>
         {{beast.tactics.description}}
     </p>
