--- a/bestiary/templates/bestiary/beasts.html
+++ b/bestiary/templates/bestiary/beasts.html
@@ -1,43 +1,26 @@
-{% load bootstrap5 %}
-{% load static %}
+{% extends "base.html" %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bestiary</title>
-    <link rel="stylesheet" href="{% static 'bestiary/beasts.css' %}">
-</head>
-
-<body class="bg-dark">
-    <div class="container align-items-center">
-        <form method="get" class="form-horizontal">
-            <div class="form-group">
-                {{filter.form}}
-            </div>
-            <input type="submit" class="btn btn-primary">
-        </form>
-        <div class="card-deck">
-            {%for b in filter.qs%}
-            <div class="card bg-gradient" style="width: 15rem;">
-                <div class="inner">
-                    <img src="{{b.image.url}}" class="card-img-top">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">{{b.name}}</h5>
-                    <p class="card-text text-justify">{{b.tactics}}</p>
-                </div>
-                <a href="{% url 'beast-by-slug' b.slug%}" class="btn btn-primary">{{b.name}}</a>
-            </div>
-            {%endfor%}
+{% block content %}
+<div class="container align-items-center">
+    <form method="get" class="form-horizontal">
+        <div class="form-group">
+            {{filter.form}}
         </div>
+        <input type="submit" class="btn btn-primary">
+    </form>
+    <div class="card-deck">
+        {%for b in filter.qs%}
+        <div class="card bg-gradient" style="width: 15rem;">
+            <div class="inner">
+                <img src="{{b.image.url}}" class="card-img-top">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{b.name}}</h5>
+                <p class="card-text text-justify">{{b.tactics}}</p>
+            </div>
+            <a href="{% url 'beast-by-slug' b.slug%}" class="btn btn-primary">{{b.name}}</a>
+        </div>
+        {%endfor%}
     </div>
-</body>
-
-</html>
+</div>
+{% endblock %}
