--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load bootstrap5 %}
-{% load static %}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
@@ -10,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block page_title%}Bestiary{% endblock %}</title>
+    {% block css_files%}{% endblock %}
 </head>
 <body class="bg-dark">
     {% block content %}{% endblock %}
