--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,9 @@
     <title>{% block page_title%}Bestiary{% endblock %}</title>
     {% block css_files%}{% endblock %}
 </head>
-<body class="bg-dark">
+
+<body class="bg-light">
     {% block content %}{% endblock %}
 </body>
+
 </html>
