--- a/bestiary/templates/bestiary/beast.html
+++ b/bestiary/templates/bestiary/beast.html
@@ -1,29 +1,43 @@
 {% extends "base.html" %}
-
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{beast.name}}</title>
-</head>
-<body>
-    {% block content%}
-    {% include 'bestiary/includes/navigation.html' %}
-    <div class="container">
-
-        <h1 class="text-center">{{beast.name}}</h1>
-        <h3>{{beast.nickname}}</h3>
-        <img src="{{beast.image.url}}" width="250" height="250">
-        <p>
-            {{beast.tactics.description}}
-        </p>
-        {% if isfav %}
-            <div>My favourite</div>
-        {% endif %}
-        {% endblock %}
+{% load static%}
+{% block page_title%}{{beast.name}}{% endblock %}
+{% block css_files %}
+<link rel="stylesheet" href="{% static 'bestiary/beast.css' %}">
+{% endblock %}
+{% block content%}
+{% include 'bestiary/includes/navigation.html' %}
+<div class="container">
+    <div class="shadow p-3 mb-5 bg-body rounded">
+        <div class="row">
+            <div class="col">
+                <img src="{{beast.image.url}}" width="500" height="500">
+            </div>
+            <div class="col">
+                <!-- {% if isfav %}
+                <div>My favourite</div>
+                {% endif %} -->
+                <h1 class="text-center">{{beast.name}}</h1>
+                <h4 class="text-muted text-center">{{beast.nickname}}</h4>
+                <h3>Gatunek: {{beast.clasification}}</h3>
+                <p class="text-justify">{{beast.tactics.description}}</p>
+                <h4>Lokalizacja:</h4>
+                <p class="text-justify">{{distribution}}</p>
+                <div class="row">
+                    {% for field in data%}
+                    {% if field.objs %}
+                    <div class="col">
+                        <h4>{{field.title}}</h4>
+                        <ul class="list-group list-group-flush">
+                            {% for obj in field.objs%}
+                            <li class="list-group-item">{{obj}}</li>
+                            {% endfor%}
+                        </ul>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
